# attic-rage

./: README.md
branches/bouncing-ui/: configure.in
branches/bouncing-ui/debian/: changelog  control  copyright  rage-common.docs  rage.install  rage.menu  rage_mini.xpm
branches/bouncing-ui/plugins/: Makefile.am
branches/bouncing-ui/plugins/mailcheck/: mailcheck.c
branches/bouncing-ui/plugins/perl/: Makefile.am  perl.c
branches/bouncing-ui/plugins/python/: Makefile.am
branches/bouncing-ui/plugins/ruby/: README
branches/bouncing-ui/plugins/ruby/samples/: JFilter.rb  TimerSample.rb
branches/bouncing-ui/plugins/xdcc/: Makefile.am  xdcc.c
branches/bouncing-ui/po/: am.po  bg.po  cs.po  el.po  fi.po  fr.po  it.po  ko.po  mk.po  no.po  pt.po  ru.po  sr.po  zh_CN.po
branches/bouncing-ui/src/common/: Makefile.am  cfgfiles.h  dcc.h  dict.c  fe.h  ignore.h  inbound.c  inbound.h  make-te.c  modes.c  modes.h  network.c  network.h  notify.c  notify.h  outbound.c  plugin-timer.c  plugin-timer.h  proto-irc.c  rage-plugin.h  rage.h  ragec.h  server.h  servlist.c  set.h  ssl.c  text.h  textevents.in  tree.c  userlist.c
branches/bouncing-ui/src/fe-gtk/: Makefile.am  about.c  chanlist.c  chanlist.h  editlist.h  fe-gtk.c  fkeys.h  gtkutil.c  gtkutil.h  maingui.h  menu.c  menu.h  mmx_cmod.h  notifygui.c  notifygui.h  palette.c  pixmaps.h  plugingui.c  rawlog.c  servlistgui.c  tabs.h  textgui.h  urlgrab.h  xtext.c  xtext.h
branches/bouncing-ui/src/pixmaps/: Makefile.am
branches/bouncing-ui/src/ui-gtk/: ui-gtk.glade  ui-gtk.gladep
branches/bouncing-ui/win32/: common.vcproj
branches/bouncing-ui/win32/gateway/: gateway.h
branches/bouncing-ui/win32/gui/: AssemblyInfo.cs  Utility.cs  gui.csproj
branches/bouncing-ui/win32/imports/: readme.txt
branches/bouncing-ui/win32/rage-dotnet/: Main.cs  rage-dotnet.csproj
branches/bouncing-ui/win32/src/: identd.c
trunk/: Makefile.am  Makefile.in  README.DCC  TODO  aclocal.m4  config.h.in  configure  configure.in  rage.desktop
trunk/debian/: changelog  rage-common.dirs  rage.dirs  rage.install  rage.postinst  rage_mini.xpm  rules
trunk/intl/: plural-exp.c
trunk/plugins/: Makefile.am  Makefile.in  plugin-conf.in
trunk/plugins/mailcheck/: Makefile.am
trunk/plugins/perl/: Makefile.am  Makefile.in  perl.c
trunk/plugins/python/: Makefile.am  Makefile.in  python.c
trunk/plugins/ruby/: ChangeLog  Makefile.am
trunk/plugins/ruby/samples/: JBanner.rb
trunk/plugins/ruby/src/: Makefile  rage-ruby-plugin.rb  rage-ruby.c
trunk/plugins/ruby/src/win32/: make.bat  make.rb  xchat-ruby.def
trunk/plugins/tbh/: Makefile  tbh.c
trunk/plugins/tcl/: Makefile.am  Makefile.in
trunk/plugins/xdcc/: Makefile.am
trunk/po/: POTFILES.in  am.po  az.po  bg.po  ca.po  cs.po  de.po  el.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  it.po  ja.po  ko.po  lt.po  lv.po  mk.po  ms.po  nl.po  no.po  pt.po  rage.pot  ru.po  sk.po  sl.po  sr.po  sv.po  uk.po  wa.po  xchat.pot  zh_CN.po
trunk/src/: Makefile.in  version-script
trunk/src/common/: Makefile.am  Makefile.in  cfgfiles.c  cfgfiles.h  ctcp.c  ctcp.h  dcc.c  dcc.h  debug.c  dict-splay.c  dict.c  dict.h  fe.h  history.c  ignore.c  ignore.h  inbound.c  inbound.h  inet.h  make-te.c  modes.c  modes.h  network.c  network.h  notify.c  notify.h  numeric.h  outbound.c  outbound.h  parse.c  parse.h  plugin-timer.c  plugin.c  plugin.h  proto-irc.c  proto-irc.h  rage-plugin.h  rage.c  rage.h  rage_data.h  (+22 more)
trunk/src/fe-gtk/: Makefile.am  Makefile.in  about.c  about.h  ascii.c  ascii.h  banlist.c  banlist.h  chanlist.c  dccgui.c  editlist.c  editlist.h  fe-gtk.c  fe-gtk.h  fkeys.c  fkeys.h  ignoregui.c  maingui.c  maingui.h  menu.c  menu.h  notifygui.c  palette.c  palette.h  pixmaps.c  plugingui.c  plugingui.h  rawlog.c  rawlog.h  search.c  search.h  servlistgui.c  setup.c  tabs.c  textgui.c  textgui.h  urlgrab.c  userlistgui.c  userlistgui.h  xtext.c  (+1 more)
trunk/src/fe-text/: Makefile.am  Makefile.in  fe-text.c
trunk/src/pixmaps/: Makefile.in
trunk/win32/: common.vcproj  rage.sln
trunk/win32/gateway/: AssemblyInfo.cpp  app.rc  gateway.cpp  gateway.h  gateway.vcproj
trunk/win32/rage-dotnet/: AssemblyInfo.cs  Main.cs  rage-dotnet.csproj
trunk/win32/src/: identd.c  rage-win32.h
(+3 files in other folders)
